# CPRC-IGVC

./: .gitignore  README.md  README.md~  UltrasonicSensor_Working.ino
Code/BeagleBoard/: master_node.cpp
Code/FreeRTOS_STK600 2/: usart.h
Code/Software Implementation/: READ_ME.txt
Code/Software Implementation/Prototypes/lidar/pcl/: CMakeLists.txt  Makefile  test  test.cpp
Communication Protocol/: Makefile  main.c  protocol.h
Documents/: 10-2-13 notes.docx  CPConnect.odt  Display board for testing.psd  Hall effect calculations.xlsx  JsonProtocol  vehicle sensors placement.psd
Electrical Schematics/IGCV/: FNR Controller v0.0 - Original.sch  FNR Controller v1.0 - Relay.sch  FNR Controller v1.1 - Relay.sch  FNR Controller v1.2 - Solid state.s#1  FNR Controller v1.2 - Solid state.sch  FNR v1.3 + Speed v1.2.s#1  FNR v1.3 + Speed v1.2.s#2  FNR v1.3 + Speed v1.2.s#3  FNR v1.3 + Speed v1.2.sch  FNR v1.4 + Speed v1.2.sch  FNR v1.4 + Speed v1.3.sch  IGVC controller v1.6.sch  IGVC controller.s#1  IGVC controller.s#2  IGVC controller.s#3  Motor driver.sch  Speed Controller v1.0.sch  eagle.epf  untitled.s#1  untitled.sch
FreeRTOS_STK600 2/Source/: croutine.d  list.d  list.lst  queue.d  queue.lst  tasks.lst
Images/: Thumbs.db
Motor_ultrasonic_proto/: Motor_ultrasonic_proto.ino
Non code/: CPconnectProposalIGVC-Fall2013.docx
Sensor code/: MileStone2NoBeag  Network  Network.ino
Software Implementation/: FunctionsTest.xlsx  READ_ME.txt
frontPanel/: frontPanel.h  frontPanel.ino
frontPanel_h/: frontPanel.c  frontPanel_h.ino
sonarFNR/: sonarFNR.ino
(+303 files in other folders)
